--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -926,111 +926,6 @@ a {
   color: #7e7d7d;
 }
 
-@media screen and (min-width: 320px) {
-  .projects .project .left-part-content {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    padding: 3rem 0;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .left-part-content {
-    -webkit-box-flex: 45%;
-        -ms-flex: 45%;
-            flex: 45%;
-    padding: 5rem 4rem 5rem 0;
-  }
-}
-
-.projects .project .left-part-content h3 {
-  text-align: right;
-  color: #000;
-  font-size: .95rem;
-  margin-bottom: 1rem;
-  position: relative;
-}
-
-.projects .project .left-part-content h3::before {
-  content: '';
-  background-color: #000;
-  height: 1px;
-  top: 50%;
-  position: absolute;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .project .left-part-content h3::before {
-    width: 20px;
-    right: -35px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .left-part-content h3::before {
-    width: 80px;
-    right: -90px;
-  }
-}
-
-.projects .project .left-part-content .left-title h1 {
-  color: #000;
-  font-size: 40px;
-  text-align: right;
-}
-
-.projects .project .left-part-content p {
-  line-height: 1.5;
-  color: #7e7d7d;
-  text-align: right;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .project .right-part-img {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .right-part-img {
-    -webkit-box-flex: 55%;
-        -ms-flex: 55%;
-            flex: 55%;
-  }
-}
-
-.projects .project .right-part-img img {
-  height: 420px;
-  width: 100%;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .only-lg {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .only-lg {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (min-width: 320px) {
-  .projects .only-xs {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .only-xs {
-    display: none;
-  }
-}
-
 .hero-btn {
   margin-top: 2rem;
   text-align: center;
@@ -1082,61 +977,9 @@ a {
   background-color: #fff;
 }
 
-.project-btn-right {
-  padding-top: 2rem;
-}
-
-.project-btn-right a {
-  font-size: .95rem;
-  text-transform: uppercase;
-  color: #000;
-  position: relative;
-}
-
-.project-btn-right a:hover .right-arrow {
-  right: -60px;
-}
-
-.project-btn-right a .right-arrow {
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  margin-top: -1px;
-  right: -49px;
-  width: 31px;
-  height: 1px;
-  -webkit-transition: right .3s ease-in;
-  transition: right .3s ease-in;
-  background-color: #111;
-}
-
-.project-btn-right a .right-arrow::before {
-  position: absolute;
-  display: block;
-  right: 0px;
-  width: 6px;
-  height: 1px;
-  content: '';
-  background-color: #111;
-  -webkit-transform: translateX(0) translateY(-3px) rotate(45deg);
-          transform: translateX(0) translateY(-3px) rotate(45deg);
-}
-
-.project-btn-right a .right-arrow::after {
-  position: absolute;
-  display: block;
-  right: 0px;
-  width: 6px;
-  height: 1px;
-  content: '';
-  background-color: #111;
-  -webkit-transform: translateX(0) translateY(3px) rotate(-45deg);
-          transform: translateX(0) translateY(3px) rotate(-45deg);
-}
-
 .project-btn-left {
   padding: 2rem 4rem 0 0;
-  float: right;
+  float: left;
 }
 
 .project-btn-left a {
