Added next and previous btn in single blog

--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -125,7 +125,7 @@
             text-decoration: none;
             text-transform: uppercase;
             font-weight: normal;
-            color: $headingColor;
+            color: $linkColor;
           }
         }
       }
