--- a/wordpress/wp-content/themes/architecture/scss/base/_base.scss
+++ b/wordpress/wp-content/themes/architecture/scss/base/_base.scss
@@ -11,8 +11,9 @@ body {
 
 a {
   font-family: $bodyFontFamily;
-  color: $linkColor;
+  text-decoration: none;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $bodyFontFamily;
   font-weight: normal;
@@ -22,10 +23,6 @@ h1, h2, h3, h4, h5, h6 {
 p {
   font-family: $bodyFontFamily;
   font-weight: normal;
-}
-
-a {
-  text-decoration: none !important;
 }
 
 .flex-center {
