--- a/wordpress/wp-content/themes/architecture/scss/pages/home/components/_buttons.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/home/components/_buttons.scss
@@ -9,6 +9,7 @@
     text-transform: uppercase;
     font-size: .8rem;
     letter-spacing: 2px;
+    color: $headingColor;
 
     &:hover {
       background-color: $hoverBg;
