--- a/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_header.scss
@@ -126,6 +126,7 @@
             text-transform: uppercase;
             font-weight: normal;
             color: $linkColor;
+            text-shadow: 1px 1px 8px #000000;
           }
         }
       }
