--- a/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
+++ b/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
@@ -6,7 +6,7 @@ $headingColor: #fff;
 $borderColor: #fff;
 
 //layouts
-$linkColor: #969696;
+$linkColor: #b5b5b5;
 $textColor: #7e7d7d;
 
 $hoverTextColor: #000;
