--- a/wordpress/wp-content/themes/architecture/scss/pages/about/_about-us.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/about/_about-us.scss
@@ -27,6 +27,10 @@
   .about-us-wrapper {
     padding: 2rem 0 8rem;
 
+    h1 {
+      text-align: center;
+    }
+
     p {
       line-height: 1.5;
       color: $textColor;
