--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -595,7 +595,7 @@ p {
   text-transform: uppercase;
   font-weight: normal;
   color: #b5b5b5;
-  text-shadow: 1px 1px 8px #000000;
+  text-shadow: 1px 1px 2px #000000;
 }
 
 .hero {
@@ -1122,6 +1122,59 @@ p {
 }
 
 .project-btn-left a .right-arrow::after {
+  position: absolute;
+  display: block;
+  right: 0px;
+  width: 6px;
+  height: 1px;
+  content: '';
+  background-color: #111;
+  -webkit-transform: translateX(0) translateY(3px) rotate(-45deg);
+          transform: translateX(0) translateY(3px) rotate(-45deg);
+}
+
+.project-btn-right {
+  padding: 2rem 4rem 0 0;
+  float: right;
+}
+
+.project-btn-right a {
+  font-size: .95rem;
+  text-transform: uppercase;
+  color: #000;
+  position: relative;
+}
+
+.project-btn-right a:hover .right-arrow {
+  right: -60px;
+}
+
+.project-btn-right a .right-arrow {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  right: -49px;
+  width: 31px;
+  height: 1px;
+  -webkit-transition: right .3s ease-in;
+  transition: right .3s ease-in;
+  background-color: #111;
+}
+
+.project-btn-right a .right-arrow::before {
+  position: absolute;
+  display: block;
+  right: 0px;
+  width: 6px;
+  height: 1px;
+  content: '';
+  background-color: #111;
+  -webkit-transform: translateX(0) translateY(-3px) rotate(45deg);
+          transform: translateX(0) translateY(-3px) rotate(45deg);
+}
+
+.project-btn-right a .right-arrow::after {
   position: absolute;
   display: block;
   right: 0px;
