--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
 
 .row {
