Adde width to sidebar, changde style

--- a/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/_pages.scss
@@ -2,9 +2,9 @@
 @import './home/home';
 
 // blog page
-@import './blog/heroblog';
-@import './blog/blogitems';
-@import './blog/components/blog-btn';
+@import './project/heroblog';
+@import './project/blogitems';
+@import './project/components/blog-btn';
 
 //single blog
 @import './single-blog/single-hero';
