--- a/wordpress/wp-content/themes/architecture/style.scss
+++ b/wordpress/wp-content/themes/architecture/style.scss
@@ -11,5 +11,6 @@
 //layouts
 @import './scss/layouts/footer';
 @import './scss/layouts/header';
+@import './scss/layouts/sidebar';
 
 @import './scss/pages/pages';
