--- a/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
@@ -22,11 +22,13 @@
 
   .blog-content-wrapper {
     padding-top: 3rem;
+    display: flex;
 
     .blog-items {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      flex-basis: 70%;
 
       article {
         flex-basis: 32%;
@@ -39,7 +41,7 @@
 
             img {
               width: 100%;
-              height: 350px;
+              height: 100%;
               transition: .5s ease;
 
               &:hover {
@@ -67,6 +69,10 @@
           padding: 0 0 .5rem;
         }
       }
+    }
+
+    .widget-content {
+      flex-basis: 30%;
     }
   }
 }
