--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -599,6 +599,11 @@ p {
   text-shadow: 1px 1px 2px #000000;
 }
 
+.widget-area {
+  width: 30%;
+  float: right;
+}
+
 .hero {
   height: 100vh;
   background-position: center center;
@@ -1288,6 +1293,9 @@ p {
 
 .blog-content .blog-content-wrapper {
   padding-top: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .blog-content .blog-content-wrapper .blog-items {
@@ -1299,6 +1307,8 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
 }
 
 .blog-content .blog-content-wrapper .blog-items article {
@@ -1313,7 +1323,7 @@ p {
 
 .blog-content .blog-content-wrapper .blog-items article .featured-image a img {
   width: 100%;
-  height: 350px;
+  height: 100%;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
@@ -1338,6 +1348,11 @@ p {
   line-height: 1.5;
   color: #000;
   padding: 0 0 .5rem;
+}
+
+.blog-content .blog-content-wrapper .widget-content {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
 }
 
 .entry-summary {
