--- a/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
@@ -73,6 +73,35 @@
 
     .widget-content {
       flex-basis: 30%;
+      padding: 0 0 0 2rem;
+
+      .widget-area {
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0,0,0,.1);
+
+        .widget_categories {
+
+          h2 {
+            text-align: center;
+            padding-top: 1rem;
+            font-size: 2rem;
+          }
+
+          ul {
+            list-style: none;
+
+            .cat-item {
+              text-decoration: none;
+
+              a {
+                color: black;
+                font-size: 1.2rem;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
