--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -929,111 +929,6 @@ p {
   color: #7e7d7d;
 }
 
-@media screen and (min-width: 320px) {
-  .projects .project .left-part-content {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    padding: 3rem 0;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .left-part-content {
-    -webkit-box-flex: 45%;
-        -ms-flex: 45%;
-            flex: 45%;
-    padding: 5rem 4rem 5rem 0;
-  }
-}
-
-.projects .project .left-part-content h3 {
-  text-align: right;
-  color: #000;
-  font-size: .95rem;
-  margin-bottom: 1rem;
-  position: relative;
-}
-
-.projects .project .left-part-content h3::before {
-  content: '';
-  background-color: #000;
-  height: 1px;
-  top: 50%;
-  position: absolute;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .project .left-part-content h3::before {
-    width: 20px;
-    right: -35px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .left-part-content h3::before {
-    width: 80px;
-    right: -90px;
-  }
-}
-
-.projects .project .left-part-content .left-title h1 {
-  color: #000;
-  font-size: 40px;
-  text-align: right;
-}
-
-.projects .project .left-part-content p {
-  line-height: 1.5;
-  color: #7e7d7d;
-  text-align: right;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .project .right-part-img {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .project .right-part-img {
-    -webkit-box-flex: 55%;
-        -ms-flex: 55%;
-            flex: 55%;
-  }
-}
-
-.projects .project .right-part-img img {
-  height: 420px;
-  width: 100%;
-}
-
-@media screen and (min-width: 320px) {
-  .projects .only-lg {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .only-lg {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-@media screen and (min-width: 320px) {
-  .projects .only-xs {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .projects .only-xs {
-    display: none;
-  }
-}
-
 .hero-btn {
   margin-top: 2rem;
   text-align: center;
@@ -1353,6 +1248,32 @@ p {
 .blog-content .blog-content-wrapper .widget-content {
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
+  padding: 0 0 0 2rem;
+}
+
+.blog-content .blog-content-wrapper .widget-content .widget-area {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.blog-content .blog-content-wrapper .widget-content .widget-area .widget_categories h2 {
+  text-align: center;
+  padding-top: 1rem;
+  font-size: 2rem;
+}
+
+.blog-content .blog-content-wrapper .widget-content .widget-area .widget_categories ul {
+  list-style: none;
+}
+
+.blog-content .blog-content-wrapper .widget-content .widget-area .widget_categories ul .cat-item {
+  text-decoration: none;
+}
+
+.blog-content .blog-content-wrapper .widget-content .widget-area .widget_categories ul .cat-item a {
+  color: black;
+  font-size: 1.2rem;
 }
 
 .entry-summary {
