--- a/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/project/_blogitems.scss
@@ -41,7 +41,7 @@
 
             img {
               width: 100%;
-              height: 100%;
+              height: 270px;
               transition: .5s ease;
 
               &:hover {
